--- a/packages/docs/pages/lib/index.mdx
+++ b/packages/docs/pages/lib/index.mdx
@@ -2,12 +2,12 @@
 
 We offer official client libraries in a few popular languages:
 
-*  [Javascript/Typescript](/lib/js)
-*  [React](/lib/react)
-*  [PHP](/lib/php)
-*  [Ruby](/lib/ruby)
-*  [Python](/lib/python)
+- [Javascript/Typescript](/lib/js)
+- [React](/lib/react)
+- [PHP](/lib/php)
+- [Ruby](/lib/ruby)
+- [Python](/lib/python)
 
 There is also a guide if you want to [build your own](/lib/build-your-own).
 
-It's not required to use any of these libraries.  The only requirement is that you track in your datasource when users are put into an experiment and which variation they received.
+It's not required to use any of these libraries. The only requirement is that you track in your datasource when users are put into an experiment and which variation they received.
