--- a/packages/docs/pages/app/webhooks.mdx
+++ b/packages/docs/pages/app/webhooks.mdx
@@ -2,7 +2,7 @@
 
 Webhooks are one way to keep cached experiment configuration up-to-date on your servers.
 
-With the [API](/api-docs), your servers pull experiment overrides from Growth Book in a cronjob (or similar).
+With the [API](/app/api), your servers pull experiment overrides from Growth Book in a cronjob (or similar).
 
 With **Webhooks**, Growth Book pushes experiment overrides to your servers as soon as they change.
 
@@ -41,12 +41,12 @@ Here's an example payload:
 
 The `overrides` field has one entry per experiment with overrides that should take precedence over hard-coded values in your code.
 
--  **status** - Either "draft", "running", or "stopped".  Stopped experiments are only included in the response if a non-control variation won.
--  **weights** - How traffic should be weighted between variations. Will add up to 1.
--  **coverage** - A float from 0 to 1 (inclusive) which specifies what percent of users to include in the experiment.
--  **groups** - An array of user groups who are eligible for the experiment
--  **url** - A regex for which URLs the experiment should run on
--  **force** - Force all users to see the specified variation index (`0` = control, `1` = first variation, etc.).
+- **status** - Either "draft", "running", or "stopped". Stopped experiments are only included in the response if a non-control variation won.
+- **weights** - How traffic should be weighted between variations. Will add up to 1.
+- **coverage** - A float from 0 to 1 (inclusive) which specifies what percent of users to include in the experiment.
+- **groups** - An array of user groups who are eligible for the experiment
+- **url** - A regex for which URLs the experiment should run on
+- **force** - Force all users to see the specified variation index (`0` = control, `1` = first variation, etc.).
 
 ## VPCs and Firewalls
 
@@ -60,22 +60,22 @@ Here is example code in NodeJS for verifying the signature. Other languages shou
 
 ```js
 const crypto = require("crypto");
-const express = require('express')
-const bodyParser = require('body-parser')
+const express = require("express");
+const bodyParser = require("body-parser");
 
 // Retrieve from Growth Book settings
-const GROWTHBOOK_WEBHOOK_SECRET = 'abc123';
+const GROWTHBOOK_WEBHOOK_SECRET = "abc123";
 
-const app = express()
+const app = express();
 
 app.post("/webhook", bodyParser.raw(), (req, res) => {
   const payload = req.body;
-  const sig = req.get('X-GrowthBook-Signature');
+  const sig = req.get("X-GrowthBook-Signature");
 
   const computed = crypto
-    .createHmac('sha256', GROWTHBOOK_WEBHOOK_SECRET)
+    .createHmac("sha256", GROWTHBOOK_WEBHOOK_SECRET)
     .update(req.body)
-    .digest('hex')
+    .digest("hex");
 
   if (!crypto.timingSafeEqual(Buffer.from(computed), Buffer.from(sig))) {
     throw new Error("Signatures do not match!");
