--- a/packages/docs/pages/lib/react.mdx
+++ b/packages/docs/pages/lib/react.mdx
@@ -4,42 +4,41 @@ View the full documentation on [GitHub](https://github.com/growthbook/growthbook
 
 ## Installation
 
-`yarn add @growthbook/growthbook-react` 
+`yarn add @growthbook/growthbook-react`
 
-or 
+or
 
 `npm install --save @growthbook/growthbook-react`
 
 ## Quick Start
 
-### Step 1: Configure your app 
+### Step 1: Configure your app
+
 ```tsx
-import {
-  GrowthBook, GrowthBookProvider
-} from '@growthbook/growthbook-react'
+import { GrowthBook, GrowthBookProvider } from "@growthbook/growthbook-react";
 
 // Create a GrowthBook instance
 const growthbook = new GrowthBook({
   // The attributes you want to use to assign variations
   user: {
-    id: "123"
+    id: "123",
   },
   // Called every time the user is put into an experiment
   trackingCallback: (experiment, result) => {
     // Mixpanel, Segment, GA, or custom tracking
     mixpanel.track("Experiment Viewed", {
       experiment: experiment.key,
-      variation: result.variationId
-    })
-  }
+      variation: result.variationId,
+    });
+  },
 });
 
 export default function App() {
   return (
     <GrowthBookProvider growthbook={growthbook}>
-      <OtherComponent/>
+      <OtherComponent />
     </GrowthBookProvider>
-  )
+  );
 }
 ```
 
@@ -48,15 +47,15 @@ export default function App() {
 #### Hooks (recommended)
 
 ```tsx
-import { useExperiment } from '@growthbook/growthbook-react'
+import { useExperiment } from "@growthbook/growthbook-react";
 
 export default function OtherComponent() {
   const { value } = useExperiment({
     key: "new-headline",
     variations: ["Hello", "Hi", "Good Day"],
-  })
+  });
 
-  return <h1>{ value }</h1>
+  return <h1>{value}</h1>;
 }
 ```
 
@@ -65,16 +64,16 @@ export default function OtherComponent() {
 **Note:** This library uses hooks internally, so still requires React 16.8 or above.
 
 ```tsx
-import { withRunExperiment } from '@growthbook/growthbook-react';
+import { withRunExperiment } from "@growthbook/growthbook-react";
 
 class MyComponent extends Component {
   render() {
     // The `runExperiment` prop is identical to the `useExperiment` hook
-    const {value} = this.props.runExperiment({
+    const { value } = this.props.runExperiment({
       key: "headline-test",
-      variations: ["Hello World", "Hola Mundo"]
+      variations: ["Hello World", "Hola Mundo"],
     });
-    return <h1>{value}</h1>
+    return <h1>{value}</h1>;
   }
 }
 // Wrap your component in `withRunExperiment`
@@ -91,7 +90,7 @@ The easiest way to accomplish this is with the Growth Book App (https://github.c
 
 If `process.env.NODE_ENV !== "production"` AND you are in a browser environment, dev mode is enabled by default. You can override this behavior by explicitly passing in the `disableDevMode` prop to `GrowthBookProvider`.
 
-Dev Mode adds a variation switcher UI that floats on the bottom left of pages.  Use this to easily test out all the experiment combinations. It also includes a screenshot tool to download images of all your variations.
+Dev Mode adds a variation switcher UI that floats on the bottom left of pages. Use this to easily test out all the experiment combinations. It also includes a screenshot tool to download images of all your variations.
 
 [View Live Demo](https://growthbook.github.io/growthbook-react/)
 
